fixing Header issue on mobile and tablet #4cfun

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -646,6 +646,9 @@ h2 {
 	& .post-body {
 		@include flex-grow(1);
 		min-width: 0;
+		strong {
+			word-break: break-all;
+		}
 
 		img {
 			max-width: 100%;
